<resources>
    <string name="app_name" translatable="false">Funny Sound App - Prank Sound</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">French</string>
    <string name="portuguese" translatable="false">Portuguese</string>
    <string name="spanish" translatable="false">Spanish</string>
    <string name="german" translatable="false">German</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="indonesia" translatable="false">Indonesia</string>
    <string name="china" translatable="false">China</string>

    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Funny Sound App - Prank Sound, would \nyou mind rating us on the Google Play, then?</string>

    <string name="language_start">\u00A0Language</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="report_bugs_and_tell_us_what_to_improve">Report bugs and tell us what to improve</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="request">Request or feedback</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="version">Version</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="title_intro_01">Title 01</string>
    <string name="title_intro_02">Title 02</string>
    <string name="title_intro_03">Title 03</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="u_privacy_policy"><u>Privacy Policy</u></string>
    <string name="private_policy">private policy</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="sound">Sound</string>
    <string name="trending">Trending</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="permission">Permission</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="start_after">Start after</string>
    <string name="loop_sound">Loop Sound</string>
    <string name="play">PLay</string>
    <string name="no_internet_connections">No Internet Connections!</string>
    <string name="fart">Fart</string>
    <string name="animal">Animal</string>
    <string name="laughing">Laughing</string>
    <string name="scary">Scary</string>
    <string name="hair_clipper">Hair clipper</string>
    <string name="toilet_flushing">Toilet Flushing</string>
    <string name="door_bell">Door bell</string>
    <string name="clapping">Clapping</string>
    <string name="gun">Gun</string>
    <string name="breaking">Breaking</string>
    <string name="fart_3">Fart 3</string>
    <string name="toilet_plushing_5">Toilet Plushing 5</string>
    <string name="sheep">Sheep</string>
    <string name="laughing_4">Laughing 4</string>
    <string name="hair_clipper_1">Hair clipper 1</string>
    <string name="clapping_4">Clapping 4</string>
    <string name="door_bell_7">Door bell 7</string>
    <string name="playful_prank_sounds_for_you">Playful Prank Sounds For You</string>
    <string name="troll_your_friends_with_funny_sound">Troll Your Friends With Funny Sound</string>
    <string name="get_a_good_laugh_anytime">Get a good laugh anytime</string>
    <string name="bird">Bird</string>
    <string name="tiger">Tiger</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="elephant">Elephant</string>
    <string name="lion">Lion</string>
    <string name="wolf">Wolf</string>
    <string name="rooster">Rooster</string>
    <string name="duck">Duck</string>
    <string name="pig">Pig</string>
    <string name="frog">Frog</string>
    <string name="fart_1">Fart 1</string>
    <string name="fart_2">Fart 2</string>
    <string name="fart_4">Fart 4</string>
    <string name="fart_5">Fart 5</string>
    <string name="fart_6">Fart 6</string>
    <string name="fart_7">Fart 7</string>
    <string name="fart_8">Fart 8</string>
    <string name="fart_9">Fart 9</string>
    <string name="breaking_1">Breaking 1</string>
    <string name="breaking_2">Breaking 2</string>
    <string name="breaking_3">Breaking 3</string>
    <string name="breaking_4">Breaking 4</string>
    <string name="breaking_5">Breaking 5</string>
    <string name="breaking_6">Breaking 6</string>
    <string name="breaking_7">Breaking 7</string>
    <string name="breaking_8">Breaking 8</string>
    <string name="breaking_9">Breaking 9</string>
    <string name="gun_1">Gun 1</string>
    <string name="gun_2">Gun 2</string>
    <string name="gun_3">Gun 3</string>
    <string name="gun_4">Gun 4</string>
    <string name="gun_5">Gun 5</string>
    <string name="gun_6">Gun 6</string>
    <string name="gun_7">Gun 7</string>
    <string name="gun_8">Gun 8</string>
    <string name="gun_9">Gun 9</string>
    <string name="clapping_1">Clapping 1</string>
    <string name="clapping_2">Clapping 2</string>
    <string name="clapping_3">Clapping 3</string>
    <string name="clapping_5">Clapping 5</string>
    <string name="clapping_6">Clapping 6</string>
    <string name="clapping_7">Clapping 7</string>
    <string name="clapping_8">Clapping 8</string>
    <string name="clapping_9">Clapping 9</string>
    <string name="door_bell_1">Door bell 1</string>
    <string name="door_bell_2">Door bell 2</string>
    <string name="door_bell_3">Door bell 3</string>
    <string name="door_bell_4">Door bell 4</string>
    <string name="door_bell_5">Door bell 5</string>
    <string name="door_bell_6">Door bell 6</string>
    <string name="door_bell_8">Door bell 8</string>
    <string name="door_bell_9">Door bell 9</string>
    <string name="toilet_flushing_1">Toilet Flushing 1</string>
    <string name="toilet_flushing_2">Toilet Flushing 2</string>
    <string name="toilet_flushing_3">Toilet Flushing 3</string>
    <string name="toilet_flushing_4">Toilet Flushing 4</string>
    <string name="toilet_flushing_5">Toilet Flushing 5</string>
    <string name="toilet_flushing_6">Toilet Flushing 6</string>
    <string name="toilet_flushing_7">Toilet Flushing 7</string>
    <string name="toilet_flushing_8">Toilet Flushing 8</string>
    <string name="toilet_flushing_9">Toilet Flushing 9</string>
    <string name="hair_clipper_2">Hair clipper 2</string>
    <string name="hair_clipper_3">Hair clipper 3</string>
    <string name="hair_clipper_4">Hair clipper 4</string>
    <string name="hair_clipper_5">Hair clipper 5</string>
    <string name="hair_clipper_6">Hair clipper 6</string>
    <string name="hair_clipper_7">Hair clipper 7</string>
    <string name="hair_clipper_8">Hair clipper 8</string>
    <string name="hair_clipper_9">Hair clipper 9</string>
    <string name="scary_1">Scary 1</string>
    <string name="scary_2">Scary 2</string>
    <string name="scary_3">Scary 3</string>
    <string name="scary_4">Scary 4</string>
    <string name="scary_5">Scary 5</string>
    <string name="scary_6">Scary 6</string>
    <string name="scary_7">Scary 7</string>
    <string name="scary_8">Scary 8</string>
    <string name="scary_9">Scary 9</string>
    <string name="laughing_1">Laughing 1</string>
    <string name="laughing_2">Laughing 2</string>
    <string name="laughing_3">Laughing 3</string>
    <string name="laughing_5">Laughing 5</string>
    <string name="laughing_6">Laughing 6</string>
    <string name="laughing_7">Laughing 7</string>
    <string name="laughing_8">Laughing 8</string>
    <string name="laughing_9">Laughing 9</string>
    <string name="prank_sound">Prank Sound</string>
    <string name="no_sound">no sound</string>
    <string name="pause">Pause</string>
    <string name="name">Name</string>
    <string name="you_don_t_have_favorite_sounds">You don’t have favorite sounds.</string>
    <string name="sound_have_been_removed_about_favorite">Sound have been removed about favorite.</string>
    <string name="please_choose_language">please choose language</string>
    <string name="something_wrong">Something wrong</string>
    <string name="this_sound_will_play_in">This sound will play in</string>
    <string name="the_sound_will_loop_continuously_when_played">The sound will loop continuously when played.</string>
    <string name="sound_have_been_added_to_favorite">Sound have been added to Favorite.</string>
    <string name="off">Off</string>

    <string name="settings">Settings</string>
    <string name="title_dialog_per">Grant these permissions to use <b>"Funny Sound App - Prank Sound"</b>></string>
    <string name="content_dialog_per">Note: You can also grant permission in <b>Settings -> Apps -> Funny Sound App - Prank Sound ->  Storage Access </b></string>
    <string name="this_app_requires_the_following_permissions_to_provide_services_for_you">This app requires the following permissions to provide services for you:</string>
    <string name="storage_access">Storage Access</string>
    <string name="stay">Stay</string>
    <string name="agree">Agree</string>
    <string name="favorite_sound">Favorite Sound</string>
    <string name="sound_trending">Sound Trending</string>
    <string name="quit_app">Quit App</string>
    <string name="are_you_sure_you_want_to_quit_this_app">Are you sure you want to quit this app?</string>

</resources>