<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_view_c15"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_14sdp">

        <TextView
            android:id="@+id/tv_title_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:fontFamily="@font/viga"
            android:text="@string/quit_app"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_content_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/are_you_sure_you_want_to_quit_this_app"
            android:textColor="#6A6A6A"
            android:fontFamily="@font/viga"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="16dp">

            <View
                android:id="@+id/view_center"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_6sdp" />

            <RelativeLayout
                android:id="@+id/btn_cancel_quit_app"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/view_center"
                android:background="@drawable/button">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="14dp"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:fontFamily="@font/viga"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_quit_app"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/view_center"
                android:background="@drawable/button_1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="14dp"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:singleLine="true"
                    android:text="@string/quit"
                    android:fontFamily="@font/viga"
                    android:textColor="#111827"
                    android:textSize="15sp" />
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>