<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAF5"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="back"
        android:padding="8dp"
        android:clickable="false"
        android:focusable="false"
        android:visibility="invisible"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/bg_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-8dp"
        android:ellipsize="end"
        android:fontFamily="@font/badabb"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/permission"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintEnd_toStartOf="@id/favorite"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <funnysoundapp.fartpranksound.creepysound.hairclippersound.friendsprankapp.base.StrokeTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/badabb"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/permission"
        android:textColor="#FFD200"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintEnd_toStartOf="@id/favorite"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:clickable="false"
        android:focusable="false"
        android:padding="10dp"
        android:src="@drawable/ic_favorite_false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />



<ScrollView
    android:id="@+id/sclView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="24dp"
    app:layout_constraintBottom_toTopOf="@id/tv_continue"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:src="@drawable/img_permission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/this_app_requires_the_following_permissions_to_provide_services_for_you"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img"
            android:layout_marginHorizontal="21dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:textColor="@color/black"
            android:fontFamily="@font/viga"
            android:textSize="16sp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/txt"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_shadow"
            android:backgroundTint="#FFFAE5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/storage_access"
                android:fontFamily="@font/viga"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/sw_noti"
                app:layout_constraintBottom_toBottomOf="@id/sw_noti"
                app:layout_constraintStart_toStartOf="parent"
                />
            <ImageView
                android:id="@+id/sw_noti"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingVertical="12dp"
                android:src="@drawable/img_switch_ns"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_shadow"
        app:layout_constraintStart_toStartOf="@id/tv_continue"
        app:layout_constraintEnd_toEndOf="@id/tv_continue"
        app:layout_constraintBottom_toBottomOf="@id/tv_continue"
        app:layout_constraintTop_toTopOf="@id/tv_continue"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-3dp"
        android:layout_marginEnd="-2dp"/>
    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bg_play_pause"
        android:padding="14dp"
        android:layout_marginHorizontal="16dp"
        android:includeFontPadding="false"
        android:text="@string/agree_and_continue"
        android:textAllCaps="true"
        android:layout_marginBottom="172dp"
        android:fontFamily="@font/viga"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>