<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SettingFragment">

    <View
        android:id="@+id/shadow_language"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_shadow"
        android:layout_marginTop="5dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginEnd="-1dp"
        app:layout_constraintStart_toStartOf="@id/btn_language"
        app:layout_constraintTop_toTopOf="@id/btn_language"
        app:layout_constraintBottom_toBottomOf="@id/btn_language"
        app:layout_constraintEnd_toEndOf="@id/btn_language"/>
    <View
        android:id="@+id/shadow_share"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_shadow"
        android:layout_marginTop="5dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginEnd="-1dp"
        app:layout_constraintStart_toStartOf="@id/btn_share"
        app:layout_constraintTop_toTopOf="@id/btn_share"
        app:layout_constraintBottom_toBottomOf="@id/btn_share"
        app:layout_constraintEnd_toEndOf="@id/btn_share"/>
    <View
        android:id="@+id/shadow_rate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_shadow"
        android:layout_marginTop="5dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginEnd="-1dp"
        app:layout_constraintStart_toStartOf="@id/btn_rate"
        app:layout_constraintTop_toTopOf="@id/btn_rate"
        app:layout_constraintBottom_toBottomOf="@id/btn_rate"
        app:layout_constraintEnd_toEndOf="@id/btn_rate"/>
    <View
        android:id="@+id/shadow_about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_shadow"
        android:layout_marginTop="5dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginEnd="-1dp"
        app:layout_constraintStart_toStartOf="@id/btn_about"
        app:layout_constraintTop_toTopOf="@id/btn_about"
        app:layout_constraintBottom_toBottomOf="@id/btn_about"
        app:layout_constraintEnd_toEndOf="@id/btn_about"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ic_lg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_setting_translate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:fontFamily="@font/viga"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/ic_lg"
            app:layout_constraintBottom_toBottomOf="@id/ic_lg"
            app:layout_constraintStart_toEndOf="@id/ic_lg"/>
        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/viga"
            android:textSize="16sp"
            android:textColor="#FF6806"
            android:layout_marginEnd="-12dp"
            app:layout_constraintTop_toTopOf="@id/ic_lg"
            app:layout_constraintBottom_toBottomOf="@id/ic_lg"
            app:layout_constraintEnd_toStartOf="@id/arrow_right"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_language">
        <ImageView
            android:id="@+id/ic_sh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_setting_share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:fontFamily="@font/viga"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/ic_sh"
            app:layout_constraintBottom_toBottomOf="@id/ic_sh"
            app:layout_constraintStart_toEndOf="@id/ic_sh"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_share">
        <ImageView
            android:id="@+id/ic_ra"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_setting_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:fontFamily="@font/viga"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/ic_ra"
            app:layout_constraintBottom_toBottomOf="@id/ic_ra"
            app:layout_constraintStart_toEndOf="@id/ic_ra"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_lang_item_sn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_rate">
        <ImageView
            android:id="@+id/ic_ab"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_setting_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:fontFamily="@font/viga"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/ic_ab"
            app:layout_constraintBottom_toBottomOf="@id/ic_ab"
            app:layout_constraintStart_toEndOf="@id/ic_ab"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>